fixed icons spacing for cleaner ui

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -113,16 +113,16 @@
 }
 
 /* random ahh floating in the yard */
-.icon.html     { top: 10%; left: 15%; animation-delay: 0s; }
-.icon.css      { top: 30%; left: 5%;  animation-delay: 1s; }
-.icon.js       { top: 50%; left: 20%; animation-delay: 2s; }
-.icon.react    { top: 70%; left: 10%; animation-delay: 0.5s; }
-.icon.tailwind { top: 20%; left: 40%; animation-delay: 1.5s; }
-.icon.node     { top: 60%; left: 35%; animation-delay: 2.5s; }
-.icon.python   { top: 40%; left: 55%; animation-delay: 3s; }
-.icon.java     { top: 15%; left: 70%; animation-delay: 0.7s; }
-.icon.postgres { top: 55%; left: 75%; animation-delay: 2.2s; }
-.icon.github   { top: 75%; left: 60%; animation-delay: 1.8s; }
+.icon.java     { top: 10%; left: 5%;  animation-delay: 0.7s; }
+.icon.css      { top: 10%; left: 15%; animation-delay: 1s; }
+.icon.react    { top: 10%; left: 25%; animation-delay: 0.5s; }
+.icon.html     { top: 10%; left: 35%; animation-delay: 5s; }
+.icon.js       { top: 10%; left: 45%; animation-delay: 2s; }
+.icon.node     { top: 10%; left: 55%; animation-delay: 2.5s; }
+.icon.tailwind { top: 10%; left: 65%; animation-delay: 1.5s; }
+.icon.python   { top: 10%; left: 75%; animation-delay: 3s; }
+.icon.github   { top: 10%; left: 85%; animation-delay: 1.8s; }
+.icon.postgres { top: 10%; left: 95%; animation-delay: 2.2s; }
 
 /* Right-side yap text */
 .yap {
@@ -162,6 +162,7 @@
   position: relative;
   width: 100%;
   height: 100%;
+  margin-left: -4.2rem;
 }
 
 .social-icons .icon {
@@ -180,8 +181,8 @@
 }
 
 /* Place socials randomly in yard */
-.social-icons .github   { top: 10%; left: 20%; animation-delay: 0s; }
 .social-icons .insta    { top: 40%; left: 10%; animation-delay: 1s; }
-.social-icons .linkedin { top: 30%; left: 45%; animation-delay: 2s; }
+.social-icons .github   { top: 10%; left: 20%; animation-delay: 0s; }
 .social-icons .twitter  { top: 60%; left: 30%; animation-delay: 3s; }
-.social-icons .discord  { top: 50%; left: 65%; animation-delay: 4s; }
+.social-icons .linkedin { top: 30%; left: 40%; animation-delay: 2s; }
+.social-icons .discord  { top: 50%; left: 50%; animation-delay: 4s; }
