--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,11 +1,25 @@
  
 .navbar {
-    margin-top: 0.8rem;
+    position: sticky;
+    top: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #0F172A;
+    background-color: rgba(15, 23, 42, 0.877); 
+    transition: all 0.3s ease;
+    z-index: 999;
 }
+
+.navbar.scrolled {
+    padding: 3px 0px 5px 0px;
+    backdrop-filter: blur(100px) saturate(200%) brightness(120%);
+    -webkit-backdrop-filter: blur(100px) saturate(200%) brightness(120%);
+    background-color: rgba(15, 23, 42, 0.897); /* lower opacity for deeper blur */
+    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.7);
+    border-bottom: 0px solid rgba(255, 255, 255, 0.05);
+    transition: all 0.3s ease;
+}
+
 
 .title {
     font-family: "Asimovian", sans-serif;
