--- a/src/pages/BootScreen.css
+++ b/src/pages/BootScreen.css
@@ -4,7 +4,6 @@ body, html {
   background: #0F172A;
   height: 100%;
   width: 100%;
-  overflow: hidden;
 }
 
 .boot-screen {
